--- a/app.json
+++ b/app.json
@@ -5,6 +5,11 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "scheme": "nativewebwrapper",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -61,11 +66,6 @@
       "eas": {
         "projectId": "74a7b138-891a-47a1-9a93-70227ccf7d2b"
       }
-    },
-    "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
     }
   }
 }
